# motaza

./: .gitignore  CMakeLists.txt  README.md  main.cpp  motaza.cpp  motaza.hpp  motaza.pro  motaza.ui  resources.qrc
